# postgres-dba

./: CONTRIBUTING.md  Makefile  README.md  USAGE.md  pyproject.toml
.github/workflows/: initialize-repository.yml
postgres_dba/: main.py
postgres_dba/commands/: cron.py  hello.py  index.py  mail.py  processlist.py  replication.py  table.py
postgres_dba/common/: cli_utils.py  watch_it.py
postgres_dba/models/: table_printer.py
postgres_dba/models/postgres/: data.py  database.py  heartbeat.py  index.py  instance.py  pg_cron.py  processlist.py  publication.py  replication_slot.py  schema.py  subscription.py  table.py
tests/: test_cron_commands.py  test_cron_service.py  test_hello.py  test_mail.py  test_processlist_commands.py  test_processlist_service.py  test_replication_commands.py  test_replication_service.py  test_services.py  test_table_commands.py  test_table_service.py
