[project]
name = "postgres-dba"
version = "0.1.0"
description = "A toolkit for Postgres DBAs."
readme = "README.md"
authors = [{ name = "J", email = "jd-381@users.noreply.github.com" }]
requires-python = ">=3.14"
dependencies = ["psycopg[binary]>=3.3.3", "pyyaml>=6.0.3", "typer>=0.21.0"]

[dependency-groups]
dev = [
    "typer-cli>=0.21.0",
    "pytest>=9.0.2",
    "ruff>=0.14.10",
    "pre-commit>=4.5.1",
]

[project.scripts]
dba = "postgres_dba.main:app"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["postgres_dba"]

[tool.ruff]
line-length = 120
